feat: integration with Actuator, Prometheus, and Grafana Added Actuator, Prometheus, and Grafana for application monitoring. - Configured Actuator to expose metrics and health information. - Integrated Prometheus for metrics collection. - Set up Grafana for data visualization and analysis.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ api.user-info.url=https://user-info.herokuapp.com/users/
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+management.endpoints.enabled-by-default=false
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.exposure.include=health,metrics,prometheus
